--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
     border-radius: 5px;
     padding: 20px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 input[type="button"] {
     width: 60px;
