--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ input[type="button"] {
     border-radius: 5px;
     outline: none;
 }
+.clearbutton {
+    width: 60px;
+    height: 60px;
+    font-size: 18px;
+    margin: 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    outline: none;
+}
+
 input[type="button"]:hover {
     background-color: #f0f0f0;
 }
