--- a/style.css
+++ b/style.css
@@ -5,14 +5,20 @@
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(63, 53, 53);
     font-family: Arial, sans-serif;
 }
 .calculator {
-    width: 400px;
+    width: 350px;
     margin: 50px auto;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
+    border: 10px solid #fffbfb;
+    border-radius: 15px;
+    padding: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
     display: flex;
     align-items: center;
@@ -27,9 +33,10 @@ input[type="button"] {
     cursor: pointer;
     border-radius: 5px;
     outline: none;
+    background-color: gray;
 }
-.clearbutton {
-    width: 60px;
+#clearbutton {
+    width: 100%;
     height: 60px;
     font-size: 18px;
     margin: 5px;
